// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component Should Exist 1`] = `[Function]`;

exports[`Dropdown component Should render file input tree 1`] = `
<div
  className="file"
>
  <label
    className="file-label"
  >
    <input
      className="file-input"
      onChange={[Function]}
      type="file"
    />
    <span
      className="file-cta"
    >
      <span
        className="file-label"
      >
        Choose a file...
      </span>
    </span>
  </label>
</div>
`;

exports[`Dropdown component should pass file attributes 1`] = `
<div
  className="file"
>
  <label
    className="file-label"
  >
    <input
      accept="image/*"
      capture="source"
      className="file-input"
      multiple={true}
      onChange={[Function]}
      type="file"
    />
    <span
      className="file-cta"
    >
      <span
        className="file-label"
      >
        Choose a file...
      </span>
    </span>
  </label>
</div>
`;
